<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="Categories">Categories</string>
    <string name="Baby_Products">Baby Products</string>
    <string name="Bakery">Bakery</string>
    <string name="Alcoholic_Drinks">Alcoholic Drinks</string>
    <string name="Beverages">Beverages</string>
    <string name="Canned_Foods">Canned Foods</string>
    <string name="Car_Care_Products">Car Care Products</string>
    <string name="Clothes">Clothes</string>
    <string name="Hot_beverages">Hot Beverages</string>
    <string name="Cosmetics">Cosmetics</string>
    <string name="Dairy_products">Dairy Products</string>
    <string name="Diet_foods">Diet Foods</string>
    <string name="Fish_seafood">Fish Seafood</string>
    <string name="Frozen">Frozen</string>
    <string name="Grains_pasta">Grains Pasta</string>
    <string name="Home_kitchen">Home Kitchen</string>
    <string name="Home_baking">Home Baking</string>
    <string name="House_cleaning_products">House Cleaning Products</string>
    <string name="Meat_poultry_sausages">Meat Poultry Sausages</string>
    <string name="Newspapers">Newspapers</string>
    <string name="Office_supplies">Office Supplies</string>
    <string name="Oils">Oils</string>
    <string name="Other">Other</string>
    <string name="Personal_hygiene">Personal Hygiene</string>
    <string name="Pet_supplies">Pet Supplies</string>
    <string name="Pharmacy">Pharmacy</string>
    <string name="Preserves">Preserves</string>
    <string name="Produce">Produce</string>
    <string name="Ready_meals">Ready Meals</string>
    <string name="Spices_sauces_condiment">Spices Sauces Condiment</string>
    <string name="Snacks">Snacks</string>
    <string name="beer"> beer</string>
    <string name="red_wine"> red wine</string>
    <string name="white_wine"> white wine</string>
    <string name="ale_beer">ale beer</string>
    <string name="brandy">brandy</string>
    <string name="champagne">champagne</string>
    <string name="cider">cider</string>
    <string name="cognac">cognac</string>
    <string name="dry_wine">dry wine</string>
    <string name="filters">filters</string>
    <string name="flavored_beer">flavored beer</string>
    <string name="flavored_vodka">flavored vodka</string>
    <string name="gin">gin</string>
    <string name="honey_beer">honey beer</string>
    <string name="large_beer">large beer</string>
    <string name="liqueur">liqueur</string>
    <string name="martini">martini</string>
    <string name="porter_beer">porter beer</string>
    <string name="rolling_papers">rolling papers</string>
    <string name="root_beer">root beer</string>
    <string name="rose_wine">rose wine</string>
    <string name="rum">rum</string>
    <string name="semi_dry_wine">semi dry wine</string>
    <string name="semi_sweet_wine">semi sweet wine</string>
    <string name="sparkling_wine">sparkling wine</string>
    <string name="stout_beer">stout beer</string>
    <string name="sweet_wine">sweet wine</string>
    <string name="tequila">tequila</string>
    <string name="vodka">vodka</string>
    <string name="wheat_beer">wheat beer</string>
    <string name="whiskey">whiskey</string>
    <string name="baby_dinner">baby dinner</string>
    <string name="baby_food">baby food</string>
    <string name="baby_formula">baby formula</string>
    <string name="baby_healing_ointment">baby healing ointment</string>
    <string name="baby_milk">baby milk</string>
    <string name="baby_oil">baby oil</string>
    <string name="baby_powder">baby powder</string>
    <string name="baby_shampoo">baby shampoo</string>
    <string name="baby_wipes">baby wipes</string>
    <string name="bed_mats">bed mats</string>
    <string name="diaper_rash_cream">diaper rash cream</string>
    <string name="diapers">diapers</string>
    <string name="feeding_bootle">feeding bootle</string>
    <string name="infant_formula">infant formula</string>
    <string name="nurser">nurser</string>
    <string name="pacifier">pacifier</string>
    <string name="apple_pie">apple pie</string>
    <string name="bagels">bagels</string>
    <string name="baguette">baguette</string>
    <string name="birthday_cake">birthday cake</string>
    <string name="bread">bread</string>
    <string name="breadcrumbs">breadcrumbs</string>
    <string name="brown_bread">brown bread</string>
    <string name="brownie">brownie</string>
    <string name="bruschetta">bruschetta</string>
    <string name="buns">buns</string>
    <string name="cheesecake">cheesecake</string>
    <string name="chocolate_cake">chocolate cake</string>
    <string name="ciabatta">ciabatta</string>
    <string name="coffee_cake">coffee cake</string>
    <string name="corn_tortillas">corn tortillas</string>
    <string name="croissants">croissants</string>
    <string name="croutons">croutons</string>
    <string name="cupcakes">cupcakes</string>
    <string name="donut">donut</string>
    <string name="dough">dough</string>
    <string name="english_muffins">english muffins</string>
    <string name="flour_tortillas">flour tortillas</string>
    <string name="french_bread">french bread</string>
    <string name="garlic_bread">garlic bread</string>
    <string name="gingerbread">gingerbread</string>
    <string name="graham_bread">graham bread</string>
    <string name="grain_bread">grain bread</string>
    <string name="hamburger_buns">hamburger buns</string>
    <string name="hotdog_buns">hotdog buns</string>
    <string name="matzo">matzo</string>
    <string name="muffins">muffins</string>
    <string name="pie">pie</string>
    <string name="pita_bread">pita bread</string>
    <string name="puff_pastry">puff pastry</string>
    <string name="rolls">rolls</string>
    <string name="rye_bread">rye bread</string>
    <string name="sandwich_bread">sandwich bread</string>
    <string name="seed_bread">seed bread</string>
    <string name="sweet_rolls">sweet rolls</string>
    <string name="taco_shells">taco shells</string>
    <string name="tiramisu_cake">tiramisu cake</string>
    <string name="toast_bread">toast bread</string>
    <string name="tortilla_wraps">tortilla wraps</string>
    <string name="wheat_bread">wheat bread</string>
    <string name="white_bread">white bread</string>
    <string name="apple_juice">apple juice</string>
    <string name="bottled_water">bottled water</string>
    <string name="coconut_water">coconut water</string>
    <string name="cola">cola</string>
    <string name="cranberry_juice">cranberry juice</string>
    <string name="drinks">drinks</string>
    <string name="eggnog">eggnog</string>
    <string name="energy_drink">energy drink</string>
    <string name="fruit_juice">fruit juice</string>
    <string name="ginger_ale">ginger ale</string>
    <string name="grape_juice">grape juice</string>
    <string name="half_and_half">half and half</string>
    <string name="iced_coffee">iced coffee</string>
    <string name="iced_tea">iced tea</string>
    <string name="isotonic_drink">isotonic drink</string>
    <string name="juice">juice</string>
    <string name="lemonade">lemonade</string>
    <string name="lemon_juice">lemon juice</string>
    <string name="lime_juice">lime juice</string>
    <string name="mineral_water">mineral water</string>
    <string name="orange_juice">orange juice</string>
    <string name="pineapple_juice">pineapple juice</string>
    <string name="prune_juice">prune juice</string>
    <string name="raspberry_syrup">raspberry syrup</string>
    <string name="seltzer">seltzer</string>
    <string name="soda">soda</string>
    <string name="soda_water">soda water</string>
    <string name="soft_drink">soft drink</string>
    <string name="sparkling_water">sparkling water</string>
    <string name="sports_drink">sports drink</string>
    <string name="still_mineral_water">still mineral water</string>
    <string name="tomato_juice">tomato juice</string>
    <string name="tonic_water">tonic water</string>
    <string name="vitamin_water">vitamin water</string>
    <string name="apple_cider_vinegar">apple cider vinegar</string>
    <string name="balsamic_vinegar">balsamic vinegar</string>
    <string name="beef_broth">beef broth</string>
    <string name="beef_stew">beef stew</string>
    <string name="canned_beans">canned beans</string>
    <string name="canned_chicken">canned chicken</string>
    <string name="canned_peas">canned peas</string>
    <string name="caramel_sauce">caramel sauce</string>
    <string name="chicken_broth">chicken broth</string>
    <string name="chicken_chunks">chicken chunks</string>
    <string name="chocolate_sauce">chocolate sauce</string>
    <string name="chocolate_syrup">chocolate syrup</string>
    <string name="cream_of_chicken_soup">cream of chicken soup</string>
    <string name="cream_of_mushroom_soup">cream of mushroom soup</string>
    <string name="dijon_mustard">dijon mustard</string>
    <string name="dried_mushrooms">dried mushrooms</string>
    <string name="honey">honey</string>
    <string name="honey_mustard">honey mustard</string>
    <string name="ice_cream_topping">ice cream topping</string>
    <string name="ketchup">ketchup</string>
    <string name="lentil_soup">lentil soup</string>
    <string name="maple_syrup">maple syrup</string>
    <string name="mayonnaise">mayonnaise</string>
    <string name="mushroom_soup">mushroom soup</string>
    <string name="mustard">mustard</string>
    <string name="nutella">nutella</string>
    <string name="peanut_butter">peanut butter</string>
    <string name="pea_soup">pea soup</string>
    <string name="syrup">syrup</string>
    <string name="tomato_soup">tomato soup</string>
    <string name="vegetable_broth">vegetable broth</string>
    <string name="vegetable_soup">vegetable soup</string>
    <string name="vinaigrette">vinaigrette</string>
    <string name="vinegar">vinegar</string>
    <string name="car_shampoo">car shampoo</string>
    <string name="car_wax">car wax</string>
    <string name="distilled_water">distilled water</string>
    <string name="engine_oil">engine oil</string>
    <string name="motor_oil">motor oil</string>
    <string name="screen_wash">screen wash</string>
    <string name="belt">belt</string>
    <string name="blouse">blouse</string>
    <string name="bodysuit">bodysuit</string>
    <string name="bra">bra</string>
    <string name="cap">cap</string>
    <string name="cloths">cloths</string>
    <string name="coat">coat</string>
    <string name="flip_flops">flip flops</string>
    <string name="gloves">gloves</string>
    <string name="jacket">jacket</string>
    <string name="jeans">jeans</string>
    <string name="leggings">leggings</string>
    <string name="panties">panties</string>
    <string name="pantyhose">pantyhose</string>
    <string name="rainboots">rainboots</string>
    <string name="scarf">scarf</string>
    <string name="shirt">shirt</string>
    <string name="shoes">shoes</string>
    <string name="slipper">slipper</string>
    <string name="socks">socks</string>
    <string name="sunglasses">sunglasses</string>
    <string name="sweater">sweater</string>
    <string name="swimsuit">swimsuit</string>
    <string name="t_shirt">t shirt</string>
    <string name="underpants">underpants</string>
    <string name="hot_beverage">hot beverage</string>
    <string name="enterNote_forItem">Enter a note for this item</string>
    <string name="notesInput">Notes</string>
    <string name="enter_the_desired_quantity">Enter the desired quantity</string>
    <string name="quantityInput">Quantity</string>
    <string name="see_catalog_items">See the catalog items, sorted by category</string>
    <string name="see_catalog">See the catalog</string>
    <string name="changeColorNavBar">Change the color of the navigation bar</string>
    <string name="seeOtherProjets">To see my other projects ↙</string>
    <string name="general">General</string>
    <string name="confirm">Confirm</string>
</resources>