<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--below line is to create preference category-->
    <PreferenceCategory
        android:key="categoryGeneral"
        android:title="@string/general">
        <Preference
            android:key="seeCatalog"
            android:summary="@string/see_catalog_items"
            android:title="@string/see_catalog">
        </Preference>

        <Preference
            android:key="changeNavBarColor"
            android:title="@string/changeColorNavBar" />

<!--        <SwitchPreferenceCompat-->
<!--            android:key="nightMode"-->
<!--            android:summary="Still not implemented."-->
<!--            android:title="@string/activate_dark_theme"-->
<!--            android:defaultValue="false"/>-->

        <Preference
            android:key="jonesWebsite"
            android:summary="https://github.com/jonestremblay/"
            android:title="@string/seeOtherProjets">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://jonestremblay.ca/" />
        </Preference>
    </PreferenceCategory>


</PreferenceScreen>